Add Bracket and BracketReader (placeholder) classes

--- a/experiments/CMakeLists.txt
+++ b/experiments/CMakeLists.txt
@@ -3,4 +3,4 @@ project(experiments)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(experiments main.cpp Scorer.cpp Scorer.h)
+add_executable(experiments main.cpp Scorer.cpp Scorer.h BracketReader.cpp BracketReader.h Bracket.cpp Bracket.h)
