Add cereal as external library

--- a/experiments/CMakeLists.txt
+++ b/experiments/CMakeLists.txt
@@ -3,7 +3,10 @@ project(experiments)
 
 set(CMAKE_CXX_STANDARD 11)
 
+include_directories(/Users/nbermudezs/Documents/Personal/College/UIUC/Research/shj/cereal-1.2.2/include)
+
 add_executable(experiments main.cpp Scorer.cpp Scorer.h BracketReader.cpp BracketReader.h Bracket.cpp Bracket.h BracketGenerator.cpp BracketGenerator.h ConditionalProbabilityTable.cpp ConditionalProbabilityTable.h Simulator.cpp Simulator.h analysis/Statistics.cpp analysis/Statistics.h Constants.h)
 
 find_package(GSL REQUIRED)    # See below (2)
 target_link_libraries(experiments GSL::gsl GSL::gslcblas)
+target_link_libraries(experiments cereal)
