Add ForwardCPT into makefile

--- a/experiments/CMakeLists.txt
+++ b/experiments/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 include_directories(./ExternalLibraries/cereal-1.2.2/include)
 
-add_executable(experiments main.cpp Scorer.cpp Scorer.h BracketReader.cpp BracketReader.h Bracket.cpp Bracket.h BracketGenerator.cpp BracketGenerator.h cpt/BackwardCPT.cpp cpt/BackwardCPT.h Simulator.cpp Simulator.h analysis/Statistics.cpp analysis/Statistics.h Constants.h output/Serializer.cpp output/Serializer.h GeneratorConfig.cpp GeneratorConfig.h analysis/Misc.cpp analysis/Misc.h utils/PrintUtils.h utils/FileSystem.h cpt/BaseCPT.cpp cpt/BaseCPT.h)
+add_executable(experiments main.cpp Scorer.cpp Scorer.h BracketReader.cpp BracketReader.h Bracket.cpp Bracket.h BracketGenerator.cpp BracketGenerator.h cpt/BackwardCPT.cpp cpt/BackwardCPT.h Simulator.cpp Simulator.h analysis/Statistics.cpp analysis/Statistics.h Constants.h output/Serializer.cpp output/Serializer.h GeneratorConfig.cpp GeneratorConfig.h analysis/Misc.cpp analysis/Misc.h utils/PrintUtils.h utils/FileSystem.h cpt/BaseCPT.cpp cpt/BaseCPT.h cpt/ForwardCPT.cpp cpt/ForwardCPT.h)
 
 find_package(GSL REQUIRED)    # See below (2)
 target_link_libraries(experiments GSL::gsl GSL::gslcblas)
